--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_database_web: ^0.2.0+11
   web_socket_channel: ^2.2.0
   socket_io_client: ^1.0.2
+  flutter_easyloading: ^3.0.3
   # cloud_firestore: ^3.1.13
   # cloud_firestore_web: ^2.6.13
   # html: ^0.15.0
